

@startuml GUI Button Enables


[*] --> SetTm 
SetTm --> SetString : eSelectTmBtn [validFile]
SetTm : on_entry: \nSelectTmBtn active  

SetString : on_entry: \nSetInputBtn active  

SetString --> Paused : eSetInputBtn [validString]
Paused --> Running : eRunBtn [(ready || inProgress)] 
Paused : on_entry: \nRunBtn active \nStepForwardBtn active \nSaveComputationBtn active \nif hasHistory then \n  RewindBtn active \n  StepBackwardBtn active 

Paused --> Paused : eStepForwardBtn \n[inProgress]
Paused --> Halt : eStepForwardBtn [halt]
Paused --> Paused : eStepBackwardBtn
Paused --> Paused : eRewindBtn

Running --> Paused : ePauseBtn [inProgress]
Running --> Running : eLoop [inProgress]
Running --> Halt : eHalt [halt]
Running : on_entry: \nPauseBtn active 

Halt : on_entry: \nRewind active \nStepbackwardBtn active \nSaveComputationBtn active

Halt --> Paused : eRewindBtn
Halt --> Paused : eStepBackwardBtn

@enduml
